test/integration/bad/tuples/bad-index3.stan
transformed data {
   real x = 3.14;
   x.1 = 6.28;
}
